js/js.translator/testData/incremental/invalidation/circleInlineImportsUpdateWithCrossModuleInliner/lib1/f1.1.kt
inline fun f1_2() = "f1_2 -> ${f2_2()}"

inline fun f1_3() = "f1_3 -> ${f2_3()}"

inline fun f1_4() = "f1_4 -> end"
